--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ build/
 
 ### IntelliJ IDEA ###
 .idea/
-.idea/modules.xml
+.idea/binders.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
